crates/formatter/tests/snapshots/snapshots__migrations__000392_disable_tasks_notifications_by_default.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set enabled_by_default = false
where
	id in (
		'8c5a4d12-9f7e-4b3a-a1c8-6e4f2d9b5a7c',
		'3b7e8f1a-4c2d-49a6-b5e9-7f3a1c8d6b4e',
		'bd4b7168-d05e-4e19-ad0f-3593b77aa90f',
		'd4a6271c-cced-4ed0-84ad-afd02a9c7799'
	);
