crates/formatter/tests/snapshots/snapshots__migrations__000394_drop_workspace_build_ai_task_sidebar_app_id_required.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- We no longer need to enforce this constraint as tasks have their own data
-- model.
alter table workspace_builds
	drop constraint workspace_builds_ai_task_sidebar_app_id_required;
