crates/formatter/tests/snapshots/snapshots__migrations__000396_add_aibridge_interceptions_api_key_id.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- column is nullable to not break interceptions recorded before this column was added
alter table aibridge_interceptions add column api_key_id text;
